tests/org.eclipse.php.core.tests/workspace/errors/php81/enum05.pdtt
--TEST--
New in initializers
--FILE--
<?php

enum Test {
	case SimplCase;
	
	public function isSimple(): bool
	{
		return $this == self::SimpleCase;
	}
	
	public function invalid(): bool
	{
		return $this === $sample;
	}
}
?>
--EXPECT--
[line=13, start=171, end=178] Variable '$sample' is undefined
